[package]
name = "wactor"
version = "0.1.1"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"
description = "Wasm actor system based off lunatic"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lunatic = { git = "https://github.com/lunatic-solutions/rust-lib.git" }
serde = "1.0.124"
